# uk-send

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
src/uk/: __init__.py  _uk_send_base.py  _uk_send_urllib.py
src/uk_send/: _uk_send_base.py  _uk_send_httpx.py
src/uptime_kuma_send/: __init__.py  _log.py  _uk_send_base.py  _uk_send_requests.py  main.py
