[project]
name = "uptime-kuma-send"
version = "0.1.1"
description = "Send heartbeat to uptime kuma."
authors = [
    {name = "overgodofchaos", email = "vezonzzzzzz@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "~=3.12.0"
keywords = [
    "key", "key2", "key3"
]

dependencies = [
]

packages = [
    { include = "uk", from = "src" }
]

[project.urls]
Homepage = "https://github.com/username/uk-send"
Documentation = "https://uk-send.readthedocs.io"
Repository = "https://github.com/username/uk-send"

[project.optional-dependencies]
requests = [
    "requests>=2.32.5",
]
httpx = [
    "httpx>=0.28.1",
]
requests-socks = [
    "requests[socks]>=2.32.5",
]
httpx-socks = [
    "httpx[socks]>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.9.9,<2.0.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx[socks]>=0.28.1",
    "pyright>=1.1.408",
    "requests[socks]>=2.32.5",
    "ruff>=0.15.5",
]
requests = []

#[tool.hatch.build]
#include = [
#    "src/uk/py.typed"
#]