[project]
name = "uk-send"
version = "0.1.9"
description = "Send heartbeat to uptime kuma."
authors = [
    {name = "overgodofchaos", email = "vezonzzzzzz@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.0,<4.0.0"
keywords = [
    "uptime-kuma", "python", "tracking", "ping"
]
classifiers = [
    "Operating System :: OS Independent"
]

dependencies = [
]

packages = [
    { include = "uk_send", from = "src" }
]

[project.urls]
Homepage = "https://github.com/overgodofchaos/uk-send"
Documentation = "https://github.com/overgodofchaos/uk-send"
Repository = "https://github.com/overgodofchaos/uk-send"

[project.optional-dependencies]
requests = [
    "requests>=2.32.5",
]
httpx = [
    "httpx>=0.28.1",
]
requests-socks = [
    "requests[socks]>=2.32.5",
]
httpx-socks = [
    "httpx[socks]>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.9.9,<2.0.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.5",
]

requests = []
